# intersphinx_registry

./: .git-blame-ignore-revs  .pre-commit-config.yaml  LICENSE  README.md  bump_version.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
intersphinx_registry/: __init__.py  __main__.py  _info.py  cli.py  lookup.py  registry.json  rev_search.py  reverse_lookup.py  utils.py
tests/: test_basic.py  test_rev_search_tokens.py
